--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -39,7 +39,7 @@
     "from IPython.display import display, Markdown, clear_output\n",
     "import time\n",
     "\n",
-    "#set env PYTHONUNBUFFERED=1\n",
+    "# set env PYTHONUNBUFFERED=1\n",
     "os.environ[\"PYTHONUNBUFFERED\"] = \"1\""
    ]
   },
@@ -61,18 +61,19 @@
    "outputs": [],
    "source": [
     "# Configuration - Update these values with your credentials\n",
-    "ELASTICSEARCH_HOST = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\" \n",
-    "ELASTICSEARCH_API_KEY = \"elasticsearchapikey==\"  \n",
+    "ELASTICSEARCH_HOST = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\"\n",
+    "ELASTICSEARCH_API_KEY = \"elasticsearchapikey==\"\n",
     "MISTRAL_API_KEY = \"mistralapikey==\"  # Replace with your Mistral API key\n",
     "\n",
     "MISTRAL_MODEL = \"mistral-large-latest\"  # Mistral model to use\n",
-    "INFERENCE_ENDPOINT_NAME = \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
+    "INFERENCE_ENDPOINT_NAME = (\n",
+    "    \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
+    ")\n",
     "\n",
     "ELASTICSEARCH_HEADERS = {\n",
     "    \"Authorization\": f\"ApiKey {ELASTICSEARCH_API_KEY}\",\n",
-    "    \"Content-Type\": \"application/json\"\n",
-    "}\n",
-    "\n"
+    "    \"Content-Type\": \"application/json\",\n",
+    "}"
    ]
   },
   {
@@ -92,30 +93,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Creating Mistral inference endpoint: {INFERENCE_ENDPOINT_NAME} at {ELASTICSEARCH_HOST}\")\n",
+    "print(\n",
+    "    f\"Creating Mistral inference endpoint: {INFERENCE_ENDPOINT_NAME} at {ELASTICSEARCH_HOST}\"\n",
+    ")\n",
     "\n",
     "url = f\"{ELASTICSEARCH_HOST}/_inference/chat_completion/{INFERENCE_ENDPOINT_NAME}\"\n",
     "\n",
     "payload = {\n",
     "    \"service\": \"mistral\",\n",
     "    \"task_type\": \"chat_completion\",\n",
-    "    \"service_settings\": {\n",
-    "        \"api_key\": MISTRAL_API_KEY,\n",
-    "        \"model\": MISTRAL_MODEL\n",
-    "    }\n",
+    "    \"service_settings\": {\"api_key\": MISTRAL_API_KEY, \"model\": MISTRAL_MODEL},\n",
     "}\n",
     "\n",
     "try:\n",
     "    response = requests.put(url, json=payload, headers=ELASTICSEARCH_HEADERS)\n",
     "    response.raise_for_status()\n",
-    "    \n",
+    "\n",
     "    print(\"Inference endpoint created successfully!\")\n",
     "    print(f\"Response: {json.dumps(response.json(), indent=2)}\")\n",
-    "    \n",
+    "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    print(f\"Failed to create inference endpoint: {str(e)}\")\n",
-    "    if hasattr(e, 'response'):\n",
-    "        print(f\"Status code: {e.response.status_code}\")\n"
+    "    if hasattr(e, \"response\"):\n",
+    "        print(f\"Status code: {e.response.status_code}\")"
    ]
   },
   {
@@ -135,54 +135,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stream_chat_completion(host: str, endpoint_name: str, messages: list) -> Generator[str, None, None]:\n",
-    "    \n",
+    "def stream_chat_completion(\n",
+    "    host: str, endpoint_name: str, messages: list\n",
+    ") -> Generator[str, None, None]:\n",
+    "\n",
     "    url = f\"{host}/_inference/chat_completion/{endpoint_name}/_stream\"\n",
-    "    \n",
-    "    payload = {\n",
-    "        \"messages\": messages\n",
-    "    }\n",
-    "    \n",
+    "\n",
+    "    payload = {\"messages\": messages}\n",
+    "\n",
     "    try:\n",
-    "        response = requests.post(url, json=payload, headers=ELASTICSEARCH_HEADERS, stream=True)\n",
+    "        response = requests.post(\n",
+    "            url, json=payload, headers=ELASTICSEARCH_HEADERS, stream=True\n",
+    "        )\n",
     "        response.raise_for_status()\n",
-    "        \n",
+    "\n",
     "        for line in response.iter_lines(decode_unicode=True):\n",
     "            if line:\n",
     "                line = line.strip()\n",
-    "                \n",
+    "\n",
     "                # Handle Server-Sent Events format\n",
     "                # Skip event lines like \"event: message\"\n",
-    "                if line.startswith('event:'):\n",
+    "                if line.startswith(\"event:\"):\n",
     "                    continue\n",
-    "                \n",
+    "\n",
     "                # Process data lines\n",
-    "                if line.startswith('data: '):\n",
+    "                if line.startswith(\"data: \"):\n",
     "                    data_content = line[6:]  # Remove \"data: \" prefix\n",
-    "                    \n",
+    "\n",
     "                    # Skip empty data or special markers\n",
-    "                    if not data_content.strip() or data_content.strip() == '[DONE]':\n",
+    "                    if not data_content.strip() or data_content.strip() == \"[DONE]\":\n",
     "                        continue\n",
-    "                    \n",
+    "\n",
     "                    try:\n",
     "                        chunk_data = json.loads(data_content)\n",
-    "                        \n",
+    "\n",
     "                        # Extract the content from the Mistral response structure\n",
-    "                        if 'choices' in chunk_data and len(chunk_data['choices']) > 0:\n",
-    "                            choice = chunk_data['choices'][0]\n",
-    "                            if 'delta' in choice and 'content' in choice['delta']:\n",
-    "                                content = choice['delta']['content']\n",
+    "                        if \"choices\" in chunk_data and len(chunk_data[\"choices\"]) > 0:\n",
+    "                            choice = chunk_data[\"choices\"][0]\n",
+    "                            if \"delta\" in choice and \"content\" in choice[\"delta\"]:\n",
+    "                                content = choice[\"delta\"][\"content\"]\n",
     "                                if content:  # Only yield non-empty content\n",
     "                                    yield content\n",
-    "                                    \n",
+    "\n",
     "                    except json.JSONDecodeError as json_err:\n",
     "                        # If JSON parsing fails, log the error but continue\n",
     "                        print(f\"\\nJSON decode error: {json_err}\")\n",
     "                        print(f\"Problematic data: {data_content}\")\n",
     "                        continue\n",
-    "                        \n",
+    "\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        yield f\"Error: {str(e)}\"\n",
+    "\n",
     "\n",
     "print(\"✅ Streaming function defined!\")"
    ]
@@ -204,20 +207,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "user_question = \"What SNES games had a character on a skateboard and axes?\"\n",
     "\n",
     "messages = [\n",
-    "    {\"role\": \"system\", \"content\": \"You are a helpful gaming expert that provides concise answers about video games.\"},\n",
-    "    {\"role\": \"user\", \"content\": user_question}\n",
-    "    ]\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": \"You are a helpful gaming expert that provides concise answers about video games.\",\n",
+    "    },\n",
+    "    {\"role\": \"user\", \"content\": user_question},\n",
+    "]\n",
     "\n",
     "print(f\"User: {user_question}\")\n",
     "print(\"Assistant: \\n\")\n",
     "\n",
     "for chunk in stream_chat_completion(ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages):\n",
-    "    print(chunk, end=\"\", flush=True)\n",
-    "    "
+    "    print(chunk, end=\"\", flush=True)"
    ]
   },
   {
@@ -263,11 +267,15 @@
     "            \"year_JP\": {\"type\": \"keyword\"},\n",
     "            \"category\": {\"type\": \"keyword\", \"copy_to\": \"description_semantic\"},\n",
     "            \"description\": {\"type\": \"text\", \"copy_to\": \"description_semantic\"},\n",
-    "            \"description_semantic\": {\"type\": \"semantic_text\"}\n",
+    "            \"description_semantic\": {\"type\": \"semantic_text\"},\n",
     "        }\n",
     "    }\n",
     "}\n",
-    "requests.put(f\"{ELASTICSEARCH_HOST}/{INDEX_NAME}\", json=snes_mapping, headers=ELASTICSEARCH_HEADERS)"
+    "requests.put(\n",
+    "    f\"{ELASTICSEARCH_HOST}/{INDEX_NAME}\",\n",
+    "    json=snes_mapping,\n",
+    "    headers=ELASTICSEARCH_HEADERS,\n",
+    ")"
    ]
   },
   {
@@ -279,6 +287,7 @@
    "source": [
     "import requests, json\n",
     "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "def bulk_index_games(games_batch):\n",
     "    if not games_batch:\n",
@@ -293,35 +302,48 @@
     "        response = requests.post(bulk_url, data=bulk_body, headers=bulk_headers)\n",
     "        response.raise_for_status()\n",
     "        result = response.json()\n",
-    "        return sum(1 for item in result.get(\"items\", []) if item.get(\"index\", {}).get(\"status\") in [200, 201])\n",
+    "        return sum(\n",
+    "            1\n",
+    "            for item in result.get(\"items\", [])\n",
+    "            if item.get(\"index\", {}).get(\"status\") in [200, 201]\n",
+    "        )\n",
     "    except:\n",
     "        return 0\n",
+    "\n",
     "\n",
     "csv_file_path = \"snes_games.csv\"\n",
     "BATCH_SIZE = 50\n",
     "try:\n",
-    "    with open(csv_file_path, 'r', encoding='utf-8') as file:\n",
+    "    with open(csv_file_path, \"r\", encoding=\"utf-8\") as file:\n",
     "        file.readline()\n",
-    "        actual_headers = ['ID', 'Title', 'Publishers', 'Year_North_America', 'Year_JP', 'Category', 'Description']\n",
+    "        actual_headers = [\n",
+    "            \"ID\",\n",
+    "            \"Title\",\n",
+    "            \"Publishers\",\n",
+    "            \"Year_North_America\",\n",
+    "            \"Year_JP\",\n",
+    "            \"Category\",\n",
+    "            \"Description\",\n",
+    "        ]\n",
     "        total_indexed, current_batch = 0, []\n",
     "        lines = [line for line in file if line.strip()]\n",
     "\n",
     "        for line in tqdm(lines, desc=\"Indexing SNES games\"):\n",
     "            line = line.strip()\n",
     "            parts, current_part, in_quotes = [], \"\", False\n",
-    "            \n",
+    "\n",
     "            for char in line:\n",
     "                if char == '\"':\n",
     "                    in_quotes = not in_quotes\n",
     "                    current_part += char\n",
-    "                elif char == '|' and not in_quotes:\n",
+    "                elif char == \"|\" and not in_quotes:\n",
     "                    parts.append(current_part)\n",
     "                    current_part = \"\"\n",
     "                else:\n",
     "                    current_part += char\n",
     "            if current_part:\n",
     "                parts.append(current_part)\n",
-    "            \n",
+    "\n",
     "            row = {}\n",
     "            for i, header in enumerate(actual_headers):\n",
     "                value = parts[i].strip() if i < len(parts) else \"\"\n",
@@ -330,13 +352,13 @@
     "                row[header] = value\n",
     "\n",
     "            game_doc = {\n",
-    "                \"id\": row.get('ID', ''),\n",
-    "                \"title\": row.get('Title', ''),\n",
-    "                \"publishers\": row.get('Publishers', ''),\n",
-    "                \"year_US\": row.get('Year_North_America', ''),\n",
-    "                \"year_JP\": row.get('Year_JP', ''),\n",
-    "                \"category\": row.get('Category', ''),\n",
-    "                \"description\": row.get('Description', '')\n",
+    "                \"id\": row.get(\"ID\", \"\"),\n",
+    "                \"title\": row.get(\"Title\", \"\"),\n",
+    "                \"publishers\": row.get(\"Publishers\", \"\"),\n",
+    "                \"year_US\": row.get(\"Year_North_America\", \"\"),\n",
+    "                \"year_JP\": row.get(\"Year_JP\", \"\"),\n",
+    "                \"category\": row.get(\"Category\", \"\"),\n",
+    "                \"description\": row.get(\"Description\", \"\"),\n",
     "            }\n",
     "            current_batch.append(game_doc)\n",
     "            if len(current_batch) >= BATCH_SIZE:\n",
@@ -345,7 +367,7 @@
     "        if current_batch:\n",
     "            total_indexed += bulk_index_games(current_batch)\n",
     "except:\n",
-    "    pass\n"
+    "    pass"
    ]
   },
   {
@@ -368,27 +390,22 @@
     "def search_documents(query: str, max_results: int = 3) -> list:\n",
     "\n",
     "    search_url = f\"{ELASTICSEARCH_HOST}/{INDEX_NAME}/_search\"\n",
-    "    \n",
+    "\n",
     "    search_body = {\n",
     "        \"size\": max_results,\n",
-    "        \"query\": {\n",
-    "            \"semantic\": {\n",
-    "            \"field\": \"description_semantic\",\n",
-    "            \"query\": query\n",
-    "            }\n",
-    "        }\n",
+    "        \"query\": {\"semantic\": {\"field\": \"description_semantic\", \"query\": query}},\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        response = requests.post(search_url, json=search_body, headers=ELASTICSEARCH_HEADERS)\n",
     "        response.raise_for_status()\n",
-    "        \n",
+    "\n",
     "        results = response.json()\n",
     "        return results[\"hits\"][\"hits\"]\n",
-    "        \n",
+    "\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(f\"❌ Error searching documents: {str(e)}\")\n",
-    "        return []\n"
+    "        return []"
    ]
   },
   {
@@ -398,14 +415,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "test_query = \"What SNES games had a character on a skateboard and axes?\"\n",
     "print(f\"🔍 Searching for: '{test_query}'\")\n",
     "\n",
     "search_results = search_documents(test_query, 5)\n",
     "\n",
     "for i, doc in enumerate(search_results, 1):\n",
-    "    print(f\"\\n{i}. {doc['_source']['title']} - {doc['_source']['description']} (Score: {doc['_score']:.2f})\")\n"
+    "    print(\n",
+    "        f\"\\n{i}. {doc['_source']['title']} - {doc['_source']['description']} (Score: {doc['_score']:.2f})\"\n",
+    "    )"
    ]
   },
   {
@@ -427,34 +445,34 @@
    "source": [
     "def rag_chat(user_question: str, max_context_docs: int = 10) -> str:\n",
     "    context_docs = search_documents(user_question, max_context_docs)\n",
-    "    \n",
+    "\n",
     "    context_text = \"\"\n",
     "    if context_docs:\n",
     "        context_text = \"\\n\\nRelevant context information:\\n\"\n",
     "        for i, doc in enumerate(context_docs, 1):\n",
     "            context_text += f\"\\n{i}. {doc['_source']}\\n\"\n",
-    "    \n",
+    "\n",
     "    system_prompt = \"\"\"\n",
     "        You are a helpful assistant that answers about Super Nintendo games. \n",
     "        Use the provided context information to answer the user's question accurately. \n",
     "        If the context doesn't contain relevant information, you can use your general knowledge.\n",
     "        \"\"\"\n",
-    "    \n",
+    "\n",
     "    user_prompt = user_question\n",
     "    if context_text:\n",
     "        user_prompt = f\"{context_text}\\n\\nQuestion: {user_question}\"\n",
-    "    \n",
+    "\n",
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": system_prompt},\n",
-    "        {\"role\": \"user\", \"content\": user_prompt}\n",
+    "        {\"role\": \"user\", \"content\": user_prompt},\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    full_response = \"\"\n",
     "    for chunk in stream_chat_completion(ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages):\n",
     "        print(chunk, end=\"\", flush=True)\n",
     "        full_response += chunk\n",
-    "    \n",
-    "    return full_response\n"
+    "\n",
+    "    return full_response"
    ]
   },
   {
@@ -465,13 +483,13 @@
    "outputs": [],
    "source": [
     "test_question = \"What SNES games had a character on a skateboard and axes?\"\n",
-    "rag_chat(test_question)\n"
+    "rag_chat(test_question)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
