--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -220,7 +220,9 @@
     "print(f\"User: {user_question}\")\n",
     "print(\"Assistant: \\n\")\n",
     "\n",
-    "for chunk in stream_chat_completion(ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages):\n",
+    "for chunk in stream_chat_completion(\n",
+    "    ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages\n",
+    "):\n",
     "    print(chunk, end=\"\", flush=True)"
    ]
   },
@@ -397,7 +399,9 @@
     "    }\n",
     "\n",
     "    try:\n",
-    "        response = requests.post(search_url, json=search_body, headers=ELASTICSEARCH_HEADERS)\n",
+    "        response = requests.post(\n",
+    "            search_url, json=search_body, headers=ELASTICSEARCH_HEADERS\n",
+    "        )\n",
     "        response.raise_for_status()\n",
     "\n",
     "        results = response.json()\n",
@@ -468,7 +472,9 @@
     "    ]\n",
     "\n",
     "    full_response = \"\"\n",
-    "    for chunk in stream_chat_completion(ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages):\n",
+    "    for chunk in stream_chat_completion(\n",
+    "        ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages\n",
+    "    ):\n",
     "        print(chunk, end=\"\", flush=True)\n",
     "        full_response += chunk\n",
     "\n",
