Apply suggestions from code review
Co-authored-by: Justin Castilla <59704472+justincastilla@users.noreply.github.com>

--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "import requests\n",
     "import json\n",
+    "import getpass\n",
     "import os\n",
     "from typing import Dict, Any, Generator\n",
     "from IPython.display import display, Markdown, clear_output\n",
@@ -61,8 +62,8 @@
    "outputs": [],
    "source": [
     "# Configuration - Update these values with your credentials\n",
-    "ELASTICSEARCH_HOST = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\"\n",
-    "ELASTICSEARCH_API_KEY = \"elasticsearchapikey==\"\n",
+    "ELASTICSEARCH_ENDPOINT = getpass.getpass(\"Enter Elastic Endpoint:  \")\n"
+    "ELASTICSEARCH_API_KEY = getpass.getpass(\"Enter Elasticsearch API key:    \")\n",
     "MISTRAL_API_KEY = \"mistralapikey==\"  # Replace with your Mistral API key\n",
     "\n",
     "MISTRAL_MODEL = \"mistral-large-latest\"  # Mistral model to use\n",
