--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -17,38 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7a7f9f82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: requests in /opt/homebrew/lib/python3.10/site-packages (2.32.3)\n",
-      "Requirement already satisfied: tqdm in /opt/homebrew/lib/python3.10/site-packages (4.67.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/homebrew/lib/python3.10/site-packages (from requests) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/homebrew/lib/python3.10/site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/homebrew/lib/python3.10/site-packages (from requests) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/lib/python3.10/site-packages (from requests) (2025.1.31)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/opt/homebrew/opt/python@3.10/bin/python3.10 -m pip install --upgrade pip\u001b[0m\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/opt/homebrew/opt/python@3.10/bin/python3.10 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install requests tqdm elasticsearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f284f828",
    "metadata": {},
    "outputs": [],
@@ -72,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5fdf1b27",
    "metadata": {},
    "outputs": [],
@@ -80,12 +59,10 @@
     "# Configuration - Update these values with your credentials\n",
     "ELASTICSEARCH_HOST = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\"\n",
     "ELASTICSEARCH_API_KEY = \"<your_elasticsearch_api_key_here>\"\n",
-    "MISTRAL_API_KEY = \"<your_mistral_api_key_here>\"  \n",
+    "MISTRAL_API_KEY = \"<your_mistral_api_key_here>\"\n",
     "\n",
     "MISTRAL_MODEL = \"mistral-large-latest\"  # Mistral model to use\n",
-    "INFERENCE_ENDPOINT_NAME = (\n",
-    "    \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
-    ")\n",
+    "INFERENCE_ENDPOINT_NAME = \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
     "\n",
     "ELASTICSEARCH_HEADERS = {\n",
     "    \"Authorization\": f\"ApiKey {ELASTICSEARCH_API_KEY}\",\n",
@@ -95,16 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dc1f402c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize Elasticsearch client\n",
-    "es_client = Elasticsearch(\n",
-    "    hosts=[ELASTICSEARCH_HOST],\n",
-    "    api_key=ELASTICSEARCH_API_KEY\n",
-    ")"
+    "es_client = Elasticsearch(hosts=[ELASTICSEARCH_HOST], api_key=ELASTICSEARCH_API_KEY)"
    ]
   },
   {
@@ -119,22 +93,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bdbdfaef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Mistral inference endpoint: mistral-embeddings-chat-completion at https://ugo-mistral-test-d91b08.es.us-central1.gcp.elastic.cloud:443\n",
-      "❌ Error creating inference endpoint: BadRequestError(400, 'resource_already_exists_exception', 'Inference endpoint [mistral-embeddings-chat-completion] already exists')\n",
-      "✅ Inference endpoint already exists, continuing...\n",
-      "❌ Error creating inference endpoint: BadRequestError(400, 'resource_already_exists_exception', 'Inference endpoint [mistral-embeddings-chat-completion] already exists')\n",
-      "✅ Inference endpoint already exists, continuing...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\n",
     "    f\"Creating Mistral inference endpoint: {INFERENCE_ENDPOINT_NAME} at {ELASTICSEARCH_HOST}\"\n",
@@ -147,11 +109,8 @@
     "        inference_id=INFERENCE_ENDPOINT_NAME,\n",
     "        body={\n",
     "            \"service\": \"mistral\",\n",
-    "            \"service_settings\": {\n",
-    "                \"api_key\": MISTRAL_API_KEY,\n",
-    "                \"model\": MISTRAL_MODEL\n",
-    "            }\n",
-    "        }\n",
+    "            \"service_settings\": {\"api_key\": MISTRAL_API_KEY, \"model\": MISTRAL_MODEL},\n",
+    "        },\n",
     "    )\n",
     "\n",
     "    print(\"Inference endpoint created successfully!\")\n",
@@ -176,23 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f582d78f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Streaming function defined!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def stream_chat_completion(\n",
     "    host: str, endpoint_name: str, messages: list\n",
     ") -> Generator[str, None, None]:\n",
-    "\n",
     "    url = f\"{host}/_inference/chat_completion/{endpoint_name}/_stream\"\n",
     "\n",
     "    payload = {\"messages\": messages}\n",
@@ -256,29 +206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9f5fbf08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User: What SNES games had a character on a skateboard throwing axes?\n",
-      "Assistant: \n",
-      "\n",
-      "The game you're thinking of isThe game you're thinking of is **\"Aero the Acro-Bat\"** (1993) for the SNES.\n",
-      "\n",
-      "While Aero primarily **\"Aero the Acro-Bat\"** (1993) for the SNES.\n",
-      "\n",
-      "While Aero primarily throws ** throws **boomerangs** (not axes) and rides a **skateboard** in some levels, itâs the closest match to your description. If you meant a different game, let me know!\n",
-      "\n",
-      "*(Note: Noboomerangs** (not axes) and rides a **skateboard** in some levels, itâs the closest match to your description. If you meant a different game, let me know!\n",
-      "\n",
-      "*(Note: No SNES game features a character throwing axes while skateboardingâaxes are rare in SNES platformers.)* SNES game features a character throwing axes while skateboardingâaxes are rare in SNES platformers.)*"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "user_question = \"What SNES games had a character on a skateboard throwing axes?\"\n",
     "\n",
@@ -326,19 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b87d34d3-e64f-49b7-9403-4179e9cbc0e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Error creating index 'snes-games': BadRequestError(400, 'resource_already_exists_exception', 'index [snes-games/qCGvcq2oQ_WXF_mMRmTreQ] already exists')\n",
-      "✅ Index 'snes-games' already exists, continuing...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "INDEX_NAME = \"snes-games\"\n",
     "snes_mapping = {\n",
@@ -358,18 +280,18 @@
     "\n",
     "try:\n",
     "    # Create the index using the Elasticsearch client\n",
-    "    response = es_client.indices.create(\n",
-    "        index=INDEX_NAME,\n",
-    "        body=snes_mapping\n",
-    "    )\n",
-    "    \n",
+    "    response = es_client.indices.create(index=INDEX_NAME, body=snes_mapping)\n",
+    "\n",
     "    print(f\"✅ Index '{INDEX_NAME}' created successfully!\")\n",
     "    print(f\"Response: {json.dumps(response.body, indent=2)}\")\n",
-    "    \n",
+    "\n",
     "except Exception as e:\n",
     "    print(f\"❌ Error creating index '{INDEX_NAME}': {str(e)}\")\n",
     "    # If the index already exists, that's okay\n",
-    "    if \"already exists\" in str(e).lower() or \"resource_already_exists_exception\" in str(e).lower():\n",
+    "    if (\n",
+    "        \"already exists\" in str(e).lower()\n",
+    "        or \"resource_already_exists_exception\" in str(e).lower()\n",
+    "    ):\n",
     "        print(f\"✅ Index '{INDEX_NAME}' already exists, continuing...\")"
    ]
   },
@@ -473,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f565cb68",
    "metadata": {},
    "outputs": [],
@@ -485,11 +407,8 @@
     "    }\n",
     "\n",
     "    try:\n",
-    "        response = es_client.search(\n",
-    "            index=INDEX_NAME,\n",
-    "            body=search_body\n",
-    "        )\n",
-    "        \n",
+    "        response = es_client.search(index=INDEX_NAME, body=search_body)\n",
+    "\n",
     "        return response.body[\"hits\"][\"hits\"]\n",
     "\n",
     "    except Exception as e:\n",
@@ -499,38 +418,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e037b346-d274-45d6-a5a1-8c3e3d5df28f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Searching for: 'What SNES games had a character on a skateboard throwing axes?'\n",
-      "\n",
-      "1. Super Adventure Island•Takahashi Meijin no Daibouken Jima - In this Adventure Island entry, Master Higgins wields either his classic stone axe or a boomerang, with fireballs as power-ups. He can super-jump, but no longer runs faster like in the NES. Higgins must collect fruit to survive, and can ride a skateboard to speed through stages. (Score: 17.37)\n",
-      "\n",
-      "2. Super Adventure Island II•Takahashi Meijin no Daibouken Jima II - In Adventure Island II, Master Higgins keeps his stone axe and skateboard but also gains the help of four dinosaur companions, each with unique abilities on land, sea, or air. Players collect fruit to stay alive, find eggs for power-ups, and ride dinos to tackle tougher stages with new variety. (Score: 17.12)\n",
-      "\n",
-      "3. Frogger - Frogger is a classic arcade game brought to the SNES by Morning Star Multimedia and Majesco Entertainment. Players guide a frog across busy roads and rivers, avoiding obstacles to reach safety. (Score: 11.19)\n",
-      "\n",
-      "4. Itadaki Street 2: Neon Sign wa Bara Iro ni - Itadaki Street 2: Neon Sign wa Bara Iro ni is a board game simulation that combines elements of Monopoly and stock trading. Buy properties, collect rent, and outsmart your opponents to become the wealthiest player. (Score: 9.75)\n",
-      "\n",
-      "5. Kikuni Masahiko no Jantoushi Dora Ou - Board game (Score: 9.75)\n",
-      "\n",
-      "1. Super Adventure Island•Takahashi Meijin no Daibouken Jima - In this Adventure Island entry, Master Higgins wields either his classic stone axe or a boomerang, with fireballs as power-ups. He can super-jump, but no longer runs faster like in the NES. Higgins must collect fruit to survive, and can ride a skateboard to speed through stages. (Score: 17.37)\n",
-      "\n",
-      "2. Super Adventure Island II•Takahashi Meijin no Daibouken Jima II - In Adventure Island II, Master Higgins keeps his stone axe and skateboard but also gains the help of four dinosaur companions, each with unique abilities on land, sea, or air. Players collect fruit to stay alive, find eggs for power-ups, and ride dinos to tackle tougher stages with new variety. (Score: 17.12)\n",
-      "\n",
-      "3. Frogger - Frogger is a classic arcade game brought to the SNES by Morning Star Multimedia and Majesco Entertainment. Players guide a frog across busy roads and rivers, avoiding obstacles to reach safety. (Score: 11.19)\n",
-      "\n",
-      "4. Itadaki Street 2: Neon Sign wa Bara Iro ni - Itadaki Street 2: Neon Sign wa Bara Iro ni is a board game simulation that combines elements of Monopoly and stock trading. Buy properties, collect rent, and outsmart your opponents to become the wealthiest player. (Score: 9.75)\n",
-      "\n",
-      "5. Kikuni Masahiko no Jantoushi Dora Ou - Board game (Score: 9.75)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_query = \"What SNES games had a character on a skateboard throwing axes?\"\n",
     "print(f\"🔍 Searching for: '{test_query}'\")\n",
@@ -555,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4dacdad7",
    "metadata": {},
    "outputs": [],
@@ -596,42 +487,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "32a6054b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Based on the provided context, the **Super Adventure Island** series on the SNES features a character (Master Higgins) who rides a **skateboard** and throws **axes** (specifically a on the provided context, the **Super Adventure Island** series on the SNES features a character (Master Higgins) who rides a **skateboard** and throws **axes** (specifically a stone axe or boomerang).\n",
-      "\n",
-      "Here are the two relevant games:\n",
-      "\n",
-      "1. **Super Adventure Island (1992)** â Master Higgins uses a **stone axe** and can ride a **skateboard** to speed through stages.\n",
-      "2. **Super Adventure Island II (1995)** â Master Higgins retains his **stone stone axe or boomerang).\n",
-      "\n",
-      "Here are the two relevant games:\n",
-      "\n",
-      "1. **Super Adventure Island (1992)** â Master Higgins uses a **stone axe** and can ride a **skateboard** to speed through stages.\n",
-      "2. **Super Adventure Island II (1995)** â Master Higgins retains his **stone axe** and **skateboard**, while also gaining dinosaur companions for additional abilities.\n",
-      "\n",
-      "Both games are **platformers** published by **Hudson Soft**. axe** and **skateboard**, while also gaining dinosaur companions for additional abilities.\n",
-      "\n",
-      "Both games are **platformers** published by **Hudson Soft**."
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Based on the provided context, the **Super Adventure Island** series on the SNES features a character (Master Higgins) who rides a **skateboard** and throws **axes** (specifically a stone axe or boomerang).\\n\\nHere are the two relevant games:\\n\\n1. **Super Adventure Island (1992)** â\\x80\\x93 Master Higgins uses a **stone axe** and can ride a **skateboard** to speed through stages.\\n2. **Super Adventure Island II (1995)** â\\x80\\x93 Master Higgins retains his **stone axe** and **skateboard**, while also gaining dinosaur companions for additional abilities.\\n\\nBoth games are **platformers** published by **Hudson Soft**.'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_question = \"What SNES games had a character on a skateboard throwing axes?\"\n",
     "rag_chat(test_question)"
