--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -62,7 +62,9 @@
     "MISTRAL_API_KEY = \"<your_mistral_api_key_here>\"\n",
     "\n",
     "MISTRAL_MODEL = \"mistral-large-latest\"  # Mistral model to use\n",
-    "INFERENCE_ENDPOINT_NAME = \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
+    "INFERENCE_ENDPOINT_NAME = (\n",
+    "    \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
+    ")\n",
     "\n",
     "ELASTICSEARCH_HEADERS = {\n",
     "    \"Authorization\": f\"ApiKey {ELASTICSEARCH_API_KEY}\",\n",
